--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,9 +2,12 @@
 .content {
   text-align: center;
   padding-bottom: 4em;
+  height: 84%;
   overflow: auto;
 }
-
+.timestamp {
+  width: 100px;
+}
 .loginform{
   margin-top: 30px;
 }
